--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -27,6 +27,10 @@ commands:
     description: 'Claim a kit'
   kits:
     description: 'List kits'
+  message:
+    aliases: [msg,m,tell]
+  reply:
+    aliases: [r]
 permissions:
   smp.admin:
     default: op
